--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-12  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-07-10  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
