--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-13  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtktreeview.c (gtk_tree_view_new_column_width): let's take
+	the MIN of width and max_width here, not width and max_width != -1.
+	(fixes #144480, reported by Mikael Magnusson).
+
 2005-07-13  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkicontheme.c (load_themes): Don't keep the caches
