--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-14  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtktreeview.[ch] (gtk_tree_view_get_visible_range): new
+	function. (fixes #105252, suggestion from Mikael Hallendal).
+
 2005-07-13  Manish Singh  <yosh@gimp.org>
 
 	* demos/gtk-demo/iconview_edit.c: remove unused variable.
