--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols: Add new exported symbols.
+
 2005-07-14  Tor Lillqvist  <tml@novell.com>
 
 	* gtk/gtkfilesystemwin32.c (filename_get_info): Implement getting
