--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Add new api.
+
 2005-07-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdk-sections.txt: Add new api.
