--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,15 @@
+2005-07-15  Federico Mena Quintero  <federico@ximian.com>
+
+	* gtk/tmpl/gtkfilechooserdialog.sgml: Add a "save" example to the
+	typical usage.
+
+	* gtk/gtk-sections.txt: Add GtkFileChooserConfirmation,
+	gtk_file_chooser_set_do_overwrite_confirmation,
+	gtk_file_chooser_get_do_overwrite_confirmation.
+
+	* gtk/tmpl/gtkfilechooser.sgml: Document the confirmation signal
+	and enumeration; provide an example.
+
 2005-07-14  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add new api.
