--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* no.po: Update
+
 2005-07-14  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
